--- a/Web.Statu/Views/Manage/CreatePerson.cshtml
+++ b/Web.Statu/Views/Manage/CreatePerson.cshtml
@@ -60,6 +60,14 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.Umrti, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Umrti, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Umrti, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.DropDownListFor(model => model.Status, statusList,
