--- a/Web.Statu/Views/Shared/_Footer.cshtml
+++ b/Web.Statu/Views/Shared/_Footer.cshtml
@@ -98,7 +98,7 @@
 *@
 
 
-<div class="box-cta">
+<div class="box-cta" id="fundingAdFooter">
     <div class="container">
         <div class="box-cta__content">
             <h2 class="box-cta__title">
