--- a/Web.Statu/App_Code/Util.cshtml
+++ b/Web.Statu/App_Code/Util.cshtml
@@ -69,6 +69,16 @@
 
 }
 
+@helper HideFundingInFooter()
+    {
+string s = @"
+<style>
+    #fundingAdFooter { display: none; }
+</style>
+";
+    @Html.Raw(s);
+    }
+
 @helper AddVisitImg(string path)
 {
     string base64 = Convert.ToBase64String(System.Text.Encoding.UTF8.GetBytes(path));
