--- a/Web.Statu/Views/Home/Reports/16_Poslanci2017.cshtml
+++ b/Web.Statu/Views/Home/Reports/16_Poslanci2017.cshtml
@@ -60,7 +60,7 @@
             HtmlRender = (s) => {
                 Osoba o = (Osoba)s;
                 OsobaEvent oe = o.Events()
-                    .Where(m=>m.Type==(int)OsobaEvent.Types.Poslanec)
+                    .Where(m=>m.Type==(int)OsobaEvent.Types.VolenaFunkce && "poslanec".Equals(m.AddInfo, StringComparison.InvariantCultureIgnoreCase)) //tady by to sneslo lepší porovnání než textovou hodnotou
                     .OrderByDescending(m=>m.DatumOd)
                     .FirstOrDefault();
                 if (oe == null)
@@ -69,13 +69,13 @@
                 }
                 else
                 {
-                    return oe.PolitickaStrana;
+                    return oe.Organizace;
                 }
             },
             OrderValueRender = (s) => {
                 Osoba o = (Osoba)s;
                 OsobaEvent oe = o.Events()
-                    .Where(m=>m.Type==(int)OsobaEvent.Types.Poslanec)
+                    .Where(m=>m.Type==(int)OsobaEvent.Types.VolenaFunkce && "poslanec".Equals(m.AddInfo, StringComparison.InvariantCultureIgnoreCase))
                     .OrderByDescending(m=>m.DatumOd)
                     .FirstOrDefault();
                 if (oe == null)
@@ -84,7 +84,7 @@
                 }
                 else
                 {
-                    return oe.PolitickaStrana;
+                    return oe.Organizace;
                 }
 
             }
